got lab2 working with a hack

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,8 +3,9 @@ project(AVT7)
 
 set(CMAKE_CXX_STANDARD 11)
 
-add_executable(AVT7
-        labs/matyas/02/AVTmathLib.h labs/matyas/02/AVTmathLib.cpp
-        labs/matyas/02/basic_geometry.cpp labs/matyas/02/basic_geometry.h
-        labs/matyas/02/vsShaderLib.cpp labs/matyas/02/vsShaderLib.h)
+add_definitions(-DTIXML_USE_STL -DFREEGLUT_STATIC -D_CRT_SECURE_NO_WARNINGS)
+
+file(GLOB SOURCES labs/matyas/02/*.h labs/matyas/02/*.cpp)
+
+add_executable(AVT7 ${SOURCES})
 target_link_libraries(AVT7 -lm -lGL -L/usr/X11R6/lib -lGLU -lglut -lGLEW)
