Done some work during the excercise

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ set(CMAKE_CXX_STANDARD 11)
 
 add_definitions(-DTIXML_USE_STL -DFREEGLUT_STATIC -D_CRT_SECURE_NO_WARNINGS)
 
-file(GLOB SOURCES labs/matyas/minimal/*.h labs/matyas/minimal/*.cpp)
+file(GLOB SOURCES labs/matyas/03/*.h labs/matyas/03/*.cpp)
 
 add_executable(AVT7 ${SOURCES})
 target_link_libraries(AVT7 -lm -lGL -L/usr/X11R6/lib -lGLU -lglut -lGLEW)
