--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,11 @@
 cmake_minimum_required(VERSION 3.14)
-project(AVT7)
 
+project(AVT7)
 set(CMAKE_CXX_STANDARD 11)
 
-add_definitions(-DTIXML_USE_STL -DFREEGLUT_STATIC -D_CRT_SECURE_NO_WARNINGS)
-
-file(GLOB SOURCES src/*.h src/*.cpp)
-
+# Include all of the files into the project
+file(GLOB_RECURSE SOURCES src/*.h src/*.cpp)
 add_executable(AVT7 ${SOURCES})
+
+# Linking might be different on other OS
 target_link_libraries(AVT7 -lm -lGL -L/usr/X11R6/lib -lGLU -lglut -lGLEW)
