All the cameras almost working

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ set(CMAKE_CXX_STANDARD 11)
 
 # Include all of the files into the project
 file(GLOB_RECURSE SOURCES src/*.h src/*.cpp src/Camera.h)
-add_executable(AVT7 ${SOURCES} src/PerspectiveCamera.h)
+add_executable(AVT7 ${SOURCES} src/CameraPerspective.h src/CameraPerspectiveMoving.h src/CameraOrthogonal.h)
 
 # Linking might be different on other OS
 target_link_libraries(AVT7 -lm -lGL -L/usr/X11R6/lib -lGLU -lglut -lGLEW)
