fixed the logic - player should respawn after each death, not only loose lives

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ set(CMAKE_CXX_STANDARD 11)
 
 # Include all of the files into the project
 file(GLOB_RECURSE SOURCES src/*.h src/*.cpp)
-add_executable(AVT7 ${SOURCES} src/objects/TestCollider.h)
+add_executable(AVT7 ${SOURCES})
 
 if (WIN64)
     # TODO
