fixed the imports

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,5 +7,4 @@ set(CMAKE_CXX_STANDARD 11)
 file(GLOB_RECURSE SOURCES src/*.h src/*.cpp)
 add_executable(AVT7 ${SOURCES})
 
-target_link_libraries(AVT7 -lm -lGL -L/usr/X11R6/lib -lGLU -lglut -lGLEW)
-
+target_link_libraries(AVT7 -lm -lGL -L/usr/X11R6/lib -lGLU -lglut -lGLEW -ltinyxml -lIL -lILU)
